--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2": "^20.3.58",
+    "@syncfusion/ej2-react-calendars": "^20.3.56",
+    "@syncfusion/ej2-react-charts": "^20.3.58",
+    "@syncfusion/ej2-react-dropdowns": "^20.3.58",
+    "@syncfusion/ej2-react-grids": "^20.3.58",
+    "@syncfusion/ej2-react-inputs": "^20.3.57",
+    "@syncfusion/ej2-react-kanban": "^20.3.56",
+    "@syncfusion/ej2-react-popups": "^20.3.58",
+    "@syncfusion/ej2-react-richtexteditor": "^20.3.56",
+    "@syncfusion/ej2-react-schedule": "^20.3.58",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -34,5 +46,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
